# temporal-openai-slack-researcher

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  config.py  pyproject.toml  run_bot.py  run_both.py  run_worker.py
.github/workflows/: tests.yml
diagram/: README.md  agents.md
research_agent/: agent.py  sys_prompt.py  tools.py
research_agents/: combined_agent.py  execution_agent.py  execution_eval_agent.py  plan_agent.py  plan_eval_agent.py  tools.py  types.py
slack/: message_handler.py  session.py  session_manager.py
temporal/: activities.py  client.py  codec.py  conversation_workflow.py  worker.py  workflow.py
tests/: conftest.py  models.py  test_combined_agent.py  test_llm_as_judge.py  test_models.py  test_tools.py
