[project]
name = "temporal-openai-slack-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents[litellm]>=0.0.19",
    "slack-sdk>=3.35.0",
    "temporalio[openai-agents] >= 1.14.1",
    "pydantic-settings>=2.10.0",
    "slackstyler>=0.0.3",
    "slack-bolt>=1.23.0",
    "cryptography>=45.0.5",
]


[tool.hatch.metadata]
allow-direct-references = true
